--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
      <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     
+    <!-- Favicon --> 
+    <link rel='shortcut icon' type='image/x-icon' href='assets/images/favicon.ico' />
+    
     <!-- CSS stylesheet -->
      <link rel="stylesheet" href="assets/CSS/style.css">
-    <title>Document</title>
+    <title>Love Maths</title>
 </head>
 <body>
     <h1 class="heading">
